# AVcapture

./: CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt
app/src/: CMakeLists.txt  main.cpp
